membuat tulisan informasi cuaca

--- a/index.html
+++ b/index.html
@@ -152,3 +152,11 @@
         }
     </style>
 </head>
+<body>
+
+    <div class="weather-card">
+        <h2>🌤️ Informasi Cuaca Dunia</h2>
+
+      
+</body>
+</html>
