--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
             if (e.which == 13) fetchWeather();
         });
 
-       
+        $('#locationInput').val("Jogja");
+        fetchWeather();
     </script>
 </body>
 </html>
